[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yami-music-player"
version = "1.0.0"
description="An open-source music player with simple UI"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["tkinter","youtube-music-player","spotdl","online-music-player","customtkinter","youtube-dl"]
authors = [
    {name = "Mithun", email="mg.a54@proton.me"}
]

maintainers = [
    {name = "Mithun", email="mg.a54@proton.me"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GPL License",
  "Programming Language :: Python :: 3"
]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["pic/"]  # package names should match these glob patterns (["*"] by default)
exclude = [] 

[tool.setuptools.package-data]
pic = ["pic/*"]

[project.scripts]
yami = "yami:main"
